--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,18 +3,18 @@ layout: default
 ---
 <header>
   <h1>{{ site.title }}</h1>
-  {%-if site.theme_config.show_description-%}
+  {%- if site.theme_config.show_description- %}
     <p>{{ site.description }}</p>
-  {%-endif-%}
+  {%- endif -%}
 </header>
 
 <ul>
-{- for post in posts -}
+{%- for post in posts -%}
   <li>
     <span>{{ post.date | date: site.theme_config.date_format }}</span>
     <a href="{{ post.url | relative_url }}">{{ post.title | downcase }}</a>
   </li>
-{- endfor -}
+{%- endfor -%}
 </ul>
 
 {{ content }}
