--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,7 @@ body {
     text-decoration: none;
 }
 
-.content-container {
+.main {
     margin-left: max(calc(50% - 21rem), 25rem);
     padding: 2rem 3rem;
     width: 42rem;
@@ -100,4 +100,10 @@ body {
 
 .content {
     margin: 2rem 0;
+}
+
+.header-banner-image {
+    display: block;
+    margin: 2rem 0;
+    width: 100%;
 }
