--- a/_includes/figure.html
+++ b/_includes/figure.html
@@ -1,4 +1,8 @@
 <figure class="figure">
-{%- if include.img -%}<img src="{{ include.img | relative_url }}" class="figure-content"{% if include.width %} width="{{ include.width }}"{% endif %}>{%- endif -%}
-{%- if include.caption -%}<figcaption class="figure-caption">{{ include.caption }}</figcaption>{%- endif -%}
+{%- if include.img -%}
+<img src="{{ include.img | relative_url }}" class="figure-content"{% if include.width %} width="{{ include.width }}"{% endif %}>
+{%- endif -%}
+{%- if include.caption -%}
+<figcaption class="figure-caption">{{ include.caption }}</figcaption>
+{%- endif -%}
 </figure>
