--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
         </aside>
 {%- endunless -%}
         <article class="main-content">
-{%- if page.title page.date or page.source -%}
+{%- if page.title or page.date or page.source -%}
             <header class="post-header">
     {%- if page.title -%}
                 <h1 class="post-title">{{ page.title }}</h1>
