--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="color-scheme" content="light dark">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}"/>
-    <title>
-        {{ page.title | default: site.title }}
-    </title>
+    <script src="{{ '/assets/style.js' | relative_url }}"></script>
+    <title>{{ page.title | default: site.title }}</title>
 </head>
 <body>
     <nav class="site-nav" lang="en">
@@ -25,9 +24,9 @@
     </nav>
     <main class="main" lang="{{ page.lang | default: site.lang }}">
 {%- if page.cover -%}
-        <img class="page-banner-image" src="{{ page.cover | relative_url }}">
+        <img class="page-banner-image" src="{{ page.cover | relative_url }}" role="banner">
 {%- endif -%}
-        <aside class="site-badge">://argon.red</aside>
+        <a href="{{ '..' | relative_url }}" class="site-badge" role="complementary">{{ site.title }}</a>
         <article class="page-content">
 {%- if page.title or page.date or page.source -%}
             <header class="page-header">
