--- a/assets/style.scss
+++ b/assets/style.scss
@@ -50,7 +50,9 @@
     font: 16px/1.75 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
     color: var(--text-color);
     word-break: break-word;
-
+    -webkit-tap-highlight-color: transparent;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
 }
 
 body {
@@ -116,7 +118,7 @@ blockquote {
 blockquote::before {
     content: "";
     position: absolute;
-    left: 0;
+    left: 0.125em;
     top: 0.3em;
     bottom: 0.3em;
     width: 0.25em;
@@ -195,16 +197,18 @@ td {
 
 a:any-link {
     color: var(--link-text-color);
+    transition: opacity 0.2s 0.05s;
 }
 
 a:any-link:hover:active {
     opacity: 0.5;
+    transition: none;
 }
 
 /*  Chrome  */
 
 html {
-    --sidebar-width: 25vw;  /*  Will be refined by JavaScript.  */
+    --sidebar-width: max(25vw, 280px);  /*  Will be refined by JavaScript.  */
     background: linear-gradient(to right, var(--dark-accent-background-color), var(--dark-accent-background-color) var(--sidebar-width), var(--background-color) 0);
 }
 
@@ -212,19 +216,8 @@ html {
     position: fixed;
     left: 5rem;
     bottom: 30%;
-    color: var(--on-dark-text-color);
-}
-
-.site-nav-list {
     font-size: 20px;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.site-nav-list a {
-    color: inherit;
-    background: none;
+    color: var(--on-dark-text-color);
 }
 
 .link-nav {
@@ -234,41 +227,92 @@ html {
     color: var(--on-dark-text-color);
 }
 
+.site-nav-list,
 .link-nav-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-.link-nav-list > li {
-    display: inline-block;
-}
-
-.link-nav-list a {
+.site-nav a,
+.link-nav a {
     color: inherit;
     background: none;
+    padding: 0;
+}
+
+.site-nav .site-badge {
+    display: none;
+}
+
+.link-nav-list {
+    white-space: nowrap;
+    filter: brightness(2);
+}
+
+.link-nav-list > li {
+    display: inline;
+}
+
+.link-nav-list > li::after {
+    content: " ";
+    letter-spacing: 0.25em;
+}
+
+.icon-github,
+.icon-twitter {
+    display: inline-block;;
+    vertical-align: -15%;
+    width: 20px;
+    height: 20px;
+    background-size: cover;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 80 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M64.733 3.189a.982.982 0 1 1 1.363-1.414l2.121 2.047c.06.058.112.122.154.19h3.208a.99.99 0 0 1 .154-.19l2.12-2.047a.982.982 0 0 1 1.364 1.414l-.853.823H75a4 4 0 0 1 4 4v5.505a4 4 0 0 1-4 4H65a4 4 0 0 1-4-4V8.012a4 4 0 0 1 4-4h.586l-.853-.823zM65 5.94a2 2 0 0 0-2 2v5.647a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V7.94a2 2 0 0 0-2-2H65zm1 3.894a1 1 0 0 1 2 0v.894a1 1 0 1 1-2 0v-.894zm7-1a1 1 0 0 0-1 1v.894a1 1 0 1 0 2 0v-.894a1 1 0 0 0-1-1zM58 3.496h-7.208v12.499h1.766l.236 1.505 2.388-1.505H58V3.496zm-3.047 10.937l-1.402.883-.138-.882h-1.009V5.047h3.968v9.387h-1.42zM45.108 1.4s-.514 1.467-.675 1.947c-.016.045-.032.097-.049.149h4.665c.212 0 .416.083.567.232.15.147.235.349.236.56v.76h-2.988v3.218c-.003.295-.023.578-.023.853h2.621c.199-.001.39.077.532.217.14.138.22.328.218.526v.801H46.72a16.438 16.438 0 0 1-.655 3.06c-.35 1.12-1.078 2.596-1.89 3.352-1.343 1.246-3.175.558-3.175.558a19.372 19.372 0 0 0 1.841-1.742 9.829 9.829 0 0 0 1.763-3.086c.226-.693.379-1.41.455-2.135h-3.82c0-.412.166-.807.459-1.097.294-.29.692-.453 1.107-.453h2.411c.017-.28.043-.562.043-.855V5.047h-1.366l-.052.175c-.22.808-.548 1.34-1.202 1.687-.46.228-.963.35-1.475.357 0 0 .681-1.375.963-2.157.183-.49.455-1.311.767-2.161.268-.74.468-.905.802-1.14a2.494 2.494 0 0 1 1.412-.408zm2.487 10.928l1.825 2.67c.204.39.262.84.164 1.27a4.04 4.04 0 0 1-.394 1.297l-2.948-4.364 1.353-.873zM38.106 6.242c.011.163.011.326.011.491 0 5.015-3.818 10.8-10.8 10.8v-.004a10.745 10.745 0 0 1-5.817-1.701 7.621 7.621 0 0 0 5.617-1.573 3.8 3.8 0 0 1-3.546-2.636c.57.11 1.156.087 1.714-.065a3.796 3.796 0 0 1-3.045-3.72v-.049a3.771 3.771 0 0 0 1.723.475 3.8 3.8 0 0 1-1.175-5.068 10.773 10.773 0 0 0 7.823 3.966 3.798 3.798 0 0 1 6.468-3.462 7.616 7.616 0 0 0 2.41-.921 3.81 3.81 0 0 1-1.669 2.099A7.548 7.548 0 0 0 40 4.276a7.71 7.71 0 0 1-1.894 1.966zM10 1c-4.973 0-9 4.027-9 9a8.993 8.993 0 0 0 6.154 8.538c.45.08.618-.19.618-.427 0-.214-.011-.922-.011-1.676-2.261.416-2.846-.551-3.026-1.057-.101-.259-.54-1.058-.923-1.272-.315-.169-.765-.585-.011-.596.709-.011 1.215.653 1.384.923.81 1.361 2.104.978 2.621.742.079-.585.315-.979.574-1.204-2.003-.225-4.095-1.001-4.095-4.444 0-.978.349-1.788.922-2.418-.09-.225-.404-1.148.09-2.385 0 0 .754-.237 2.476.922a8.341 8.341 0 0 1 2.25-.303c.764 0 1.53.101 2.25.303 1.721-1.17 2.474-.922 2.474-.922.496 1.237.18 2.16.09 2.385.574.63.923 1.428.923 2.418 0 3.454-2.104 4.219-4.106 4.444.326.282.607.822.607 1.665 0 1.204-.011 2.171-.011 2.475 0 .236.169.518.618.428A9.014 9.014 0 0 0 19 10c0-4.973-4.027-9-9-9z' fill='%238F9097'/%3E%3C/svg%3E");
+}
+
+.icon-github {
+    background-position: 0 0;
+}
+
+.icon-twitter {
+    background-position: -20px 0;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    white-space: nowrap;
+    clip: rect(0, 0, 0, 0);
 }
 
 .main {
-    padding: 2rem 3rem 4rem;
+    padding: 2rem 3rem;
+    padding-right: max(3rem, env(safe-area-inset-right));
     margin-left: max(calc(50% - 21rem), var(--sidebar-width));  /*  Will be refined by JavaScript.  */
     max-width: 42rem;  /*  Will be refined by JavaScript.  */
 }
 
 /*  Page Content  */
 
-.site-badge {
+.main .site-badge {
     display: inline-block;
     padding-bottom: 0.25em;
     padding-right: 0.5em;
     border-bottom: solid 1px var(--border-color);
     background: none;
+    color: inherit;
+}
+
+.page-content {
+    margin: 2rem 0;
 }
 
 .home-hello {
-    position: fixed;
+    position: absolute;
     bottom: 30%;
     margin: 0;
+    padding-right: 0.5em;
     line-height: 0.9;
     font-size: 128px;
     /* font-style: italic; */
@@ -306,7 +350,7 @@ html {
 .figure-caption {  /* Not <figcaption> */
     display: table;
     max-width: 100%;
-    margin: 1em auto 0;
+    margin: 0.5em auto 0;
 }
 
 
@@ -317,7 +361,6 @@ html {
 
 .post-list-item {
     margin: 0;
-    padding: 1em 0;
     border-top: solid 1px var(--border-color);
 }
 
@@ -334,6 +377,7 @@ html {
 
 .post-entry {
     margin: 0;
+    padding: 1em 0;
 }
 
 .post-entry.has-image {
@@ -344,9 +388,9 @@ html {
 .post-entry-image {
     position: absolute;
     right: 0;
-    top: 0.25em;
+    top: 1.25em;
     width: 10em;
-    height: calc(100% - 0.5em);
+    height: calc(100% - 2.5em);
     object-fit: cover;
 }
 
@@ -369,41 +413,62 @@ html {
 
 /*  Compact Layout  */
 
-@media (max-width: 1024px) {
+@media (max-width: 960px) {
     html {
         background: var(--background-color);
+        height: 100%;
     }
 
     body {
         display: flex;
         flex-direction: column;
-        min-height: 100vh;
+        min-height: 100%;
     }
 
     .site-nav {
         position: static;
+        position: -webkit-sticky;
+        position: sticky;
+        z-index: 1;
+        top: 0;
+        left: auto;
+        bottom: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
         background-color: var(--dark-accent-background-color);
+        padding: 0.5rem 2rem;
+        padding-top: max(0.5rem, env(safe-area-inset-top));
+        padding-left: max(2rem, env(safe-area-inset-left));
+        padding-right: max(2rem, env(safe-area-inset-right));
+        font-size: inherit;
     }
 
+    .site-nav .site-badge,
     .site-nav-list {
-        font-size: inherit;
-        text-align: right;
+        display: inline-block;
     }
 
     .site-nav-list > li {
-        margin-right: 1em;
-        display: inline-block;
+        display: inline;
+    }
+
+    .site-nav-list > li::after {
+        content: " ";
+        letter-spacing: 1em;
     }
 
     .link-nav {
         position: static;
         order: 1;  /*  Move to the bottom  */
         padding: 1rem 0;
+        padding-bottom: max(env(safe-area-inset-bottom), 1rem);
         color: inherit;
     }
-
+    
     .link-nav-list {
         text-align: center;
+        filter: none;
     }
 
     .home-hello {
@@ -414,7 +479,9 @@ html {
         /*  Using `margin: 0 auto` here may cause the page to scroll horizontally  */
         /*  This is set for fallback; JavaScript will refine it.  */
         margin-left: max(calc(50% - 23rem), 0px);
-        padding: 0 2rem 3rem;
+        padding: 0 2rem;
+        padding-left: max(2rem, env(safe-area-inset-left));
+        padding-right: max(2rem, env(safe-area-inset-right));
         flex-grow: 1;
     }
 
