--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ page.lang | default: site.lang }}">
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex, follow">
     <meta name="color-scheme" content="light dark">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}"/>
